@@ -19,7 +19,7 @@ class expression : public list
     /* add pre-malloc'ed atom */
     int add(atom *a);
     /* return true if atom is in the expression */
-    int find(atom a);
+    int find(atom *a);
     /* give i'th atom */
     int get(unsigned int i, atom **a);
     /* replace vars in vlist to ident in ilist. create a new expression */
