@@ -1,5 +1,13 @@
 2003-04-08  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/atom.cpp :
+	* kb/atom.h :
+
+	  - Constants are stored as strings now. this is for the sake of
+	    simplicity of the api -- init() and get().
+
+	* kb/kb.cpp :
+	* parser/parser.y :
 	* kb/consttab.h :
 	* kb/consttab.cpp :
 
